--- a/readme.adoc
+++ b/readme.adoc
@@ -28,4 +28,10 @@ Here is a sample communication:
 . How can kubectl configuration be obtained?
 . How would Slack authenticate with AWS and pass the credentials to chatbot?
 . Allow instance size to be specified in the intent
+. Voice integration
+.. How would AWS authentication work
+.. How would the API server URI be returned
+.. How would a cryptic cluster name be returned
+.. User may ask to return details via an email/SMS/slack
+
 
