--- a/readme.adoc
+++ b/readme.adoc
@@ -23,9 +23,11 @@ Here is a sample communication:
 
 <ADD IMAGE>
 
+This bot can be integrated with your own Slack team by following the instructions ADD LINK.
+
 == Issues
 
-. How can kubectl configuration be obtained?
+. How can kubectl configuration be obtained? Currently kops updates local `kubeconfig` and has no intuititive way to return the configuration information.
 . How would Slack authenticate with AWS and pass the credentials to chatbot?
 . Allow instance size to be specified in the intent
 . Voice integration
@@ -33,5 +35,7 @@ Here is a sample communication:
 .. How would the API server URI be returned
 .. How would a cryptic cluster name be returned
 .. User may ask to return details via an email/SMS/slack
+. How can kops scale an existing cluster
+. Add a new intent to upgrade a cluster
 
 
